@@ -492,6 +492,12 @@ register_create_file txt/register.txt
 guest_file txt/guest.txt
 full_file txt/full.txt
 
+# Text file shown when someone uses WHO/DOING/SESSION at the login
+# screen. If empty, the default WHO output is shown. Allows for
+# softcoding the connect screen WHO.
+# OPTIONAL
+# who_file
+
 # The equivalent files in html, shown to Pueblo clients.
 connect_html_file txt/connect.html
 motd_html_file txt/motd.html
@@ -502,6 +508,8 @@ down_html_file txt/down.html
 register_create_html_file txt/register.html
 guest_html_file txt/guest.html
 full_html_file txt/full.html
+# OPTIONAL
+# who_html_file
 
 # The big text files. New ones can be added by setting up
 # a new subdirectory of game/txt as described in game/txt/README,
